# cpp_algos

./: .travis.yml  CMakeLists.txt
inc/: convex_hull.h  misc.h  stdarray_qs.inl
src/: convex_hull.cpp  main.cpp  misc.cpp
test/: CMakeLists.txt  test_convex_hull.cpp  test_misc_gcd.cpp  test_misc_qs.cpp  test_misc_sieve.cpp
